--- a/css/screen.css
+++ b/css/screen.css
@@ -12,16 +12,25 @@
   .hero__background {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url(../Identyfikacja/tlo_3.jpg);
+    display: none;
   }
 
-  .slide1 {
+  .hero__background.active {
+    display: block;
+  }
+
+  .slide--1 {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../Carousel/nordwood-themes-pYWrdKO5ksI-unsplash.png);
   }
 
-  .slide2{
+  .slide--2{
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../Carousel/simon-peel-ui-Bh1eegzQ-unsplash.jpg);
   }
 
+  .slide--3{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../Carousel/debby-hudson-Vjtpl3PI03s-unsplash.jpg);
+  }
+  
 
 
   /* Buttons prev next */
@@ -29,7 +38,7 @@
   .prev, .next {
     cursor: pointer;
     position: absolute;
-    top: 85%;
+    top: 50%;
     width: auto;
     margin-top: -22px;
     padding: 16px;
@@ -60,9 +69,9 @@
   /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 2s;
+  -webkit-animation-duration: 3s;
   animation-name: fade;
-  animation-duration: 2s;
+  animation-duration: 3s;
 }
 
 @-webkit-keyframes fade {
@@ -74,7 +83,6 @@
   from {opacity: .8}
   to {opacity: 1}
 }
-
 
 
 /*  HERO */
