--- a/css/screen.css
+++ b/css/screen.css
@@ -20,17 +20,12 @@
   }
 
   .slide--1 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../Carousel/nordwood-themes-pYWrdKO5ksI-unsplash.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../Carousel/slide2.png);
   }
 
   .slide--2{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../Carousel/simon-peel-ui-Bh1eegzQ-unsplash.jpg);
-  }
-
-  .slide--3{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../Carousel/debby-hudson-Vjtpl3PI03s-unsplash.jpg);
-  }
-  
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../Carousel/slide3.jpg);
+  }  
 
 
   /* Buttons prev next */
@@ -66,23 +61,23 @@
     background-color: rgba(133, 133, 133, 0.8);
   }
 
-  /* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 3s;
-  animation-name: fade;
-  animation-duration: 3s;
+/*slide animation */
+
+.slide {
+  position: absolute;
+  width: 100%; 
+  animation: slide 3s ease;
 }
 
-@-webkit-keyframes fade {
-  from {opacity: .8}
-  to {opacity: 1}
+@keyframes slide {
+  0%{
+    transform: scale(1.1);
+  }
+  100%{
+    transform: scale(1);
+  }
 }
 
-@keyframes fade {
-  from {opacity: .8}
-  to {opacity: 1}
-}
 
 
 /*  HERO */
@@ -116,9 +111,13 @@
   }
 
   .hero__button {
-    height: 4rem;
+    /* height: 4rem;
     width: 15rem;
-    font-size: 1.4rem;
+    font-size: 1.4rem; */
+
+    border-radius: 0.5rem;
+    height: 3.2rem;
+    width: 11rem;
   }
   
 
