--- a/css/screen.css
+++ b/css/screen.css
@@ -1,11 +1,22 @@
 @media (min-width: 992px) {
-  .menu__list {
+  .menu{
+    justify-content: space-between;
+    }
+    .menu__list {
     justify-content: flex-end;
     font-size: var(--font-size-2);
-  }
-  .menu__item {
+    flex-grow: 0;
+    }
+    .menu__item {
     padding: 16px;
-  }
+    }
+    
+    .menu__image{
+    display: block;
+    height: px;
+    margin-left: 150px;
+    
+    }
   /* ----- SEKCJA HERO -------- */
 
 
