--- a/css/tablet.css
+++ b/css/tablet.css
@@ -2,28 +2,33 @@
   .menu {
     display: flex;
     height: 50px;
-  }
-
-  .menu__list {
+    }
+    
+    .menu__list {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     max-height: none;
     flex-grow: 1;
     border: none;
-  }
-
-  .menu__icon {
+    }
+    
+    .menu__icon {
     display: none;
-  }
-
-  .link {
+    }
+    
+    .menu__image{
+    display: none;
+    }
+    
+    .link {
     border-bottom: none;
-  }
-
-  .info__icon {
+    }
+    
+    .info__icon {
     font-size: 2.5rem;
-  }
+    }
+    
 /* ------- HERO --------*/
 
 .hero {
