--- a/css/main.css
+++ b/css/main.css
@@ -22,57 +22,56 @@ body {
   width: 100%;
   z-index: 10;
   font-family: var(--secondary-font);
-  }
-  .menu__wrap{
+}
+.menu__wrap {
   display: flex;
   justify-content: space-between;
-  }
-  
-  /* .menu--hidden{
+}
+
+/* .menu--hidden{
   display: none;
   } */
-  
-  .menu__list {
+
+.menu__list {
   list-style: none;
   overflow: hidden;
   max-height: 0;
   transition: max-height 0.2s ease-out;
   display: block;
-  }
-  
-  .menu__image{
+}
+
+.menu__image {
   height: 20px;
   margin: auto 15px auto 0;
-  
-  }
-  
-  .menu__image img{
+}
+
+.menu__image img {
   height: 100%;
-  }
-  
-  .link {
+}
+
+.link {
   display: block;
   border-bottom: solid 1px var(--fourth-color);
   padding: 12px;
   text-decoration: none;
   color: white;
-  }
-  
-  .menu__item:hover {
+}
+
+.menu__item:hover {
   color: #ccc;
-  
+
   background-color: var(--fifth-color);
-  }
-  
-  .menu__icon {
+}
+
+.menu__icon {
   height: 100%;
   padding: 4px 48px;
   position: relative;
   cursor: pointer;
   margin: auto 0 auto 0;
-  }
-  
-  .nav__icon {
+}
+
+.nav__icon {
   background: var(--third-color);
   display: block;
   height: 2px;
@@ -80,9 +79,9 @@ body {
   position: relative;
   transition: background 0.2s ease-out;
   margin-left: 15px;
-  }
-  
-  .nav__icon:before {
+}
+
+.nav__icon:before {
   background: var(--third-color);
   content: '';
   display: block;
@@ -90,11 +89,11 @@ body {
   width: 100%;
   position: absolute;
   top: 5px;
-  
+
   transition: all 0.2s ease-out;
-  }
-  
-  .nav__icon:after {
+}
+
+.nav__icon:after {
   background: var(--third-color);
   content: '';
   display: block;
@@ -103,31 +102,30 @@ body {
   position: absolute;
   top: -5px;
   transition: all 0.2s ease-out;
-  }
-  
-  .menu__btn {
+}
+
+.menu__btn {
   display: none;
-  }
-  
-  .menu__btn:checked ~ .menu__list {
+}
+
+.menu__btn:checked ~ .menu__list {
   max-height: 300px;
-  }
-  
-  /* changing menu sign into closing one*/
-  .menu__btn:checked ~ .menu__wrap .menu__icon .nav__icon {
+}
+
+/* changing menu sign into closing one*/
+.menu__btn:checked ~ .menu__wrap .menu__icon .nav__icon {
   background-color: transparent;
-  }
-  
-  .menu__btn:checked ~ .menu__wrap .menu__icon .nav__icon:before {
+}
+
+.menu__btn:checked ~ .menu__wrap .menu__icon .nav__icon:before {
   transform: rotate(-45deg);
   top: 0;
-  }
-  
-  .menu__btn:checked ~ .menu__wrap .menu__icon .nav__icon:after {
+}
+
+.menu__btn:checked ~ .menu__wrap .menu__icon .nav__icon:after {
   transform: rotate(45deg);
   top: 0;
-  }
-  
+}
 
 /*Ostylowanie tla sekcji hero*/
 
@@ -201,7 +199,8 @@ body {
   height: 100%;
 }
 
-.prev, .next {
+.prev,
+.next {
   font-size: 0;
 }
 
@@ -420,7 +419,7 @@ body {
 }
 
 /* Ostylowanie zdjęć */
-.photo__wrapper{
+.photo__wrapper {
   display: flex;
   align-items: center;
   width: 170px;
@@ -493,7 +492,6 @@ body {
   padding: 0.75rem;
   font-size: 2.25rem;
   display: inline-block;
-
 }
 
 .social--1,
@@ -577,11 +575,12 @@ body {
 }
 
 .newsletter__input small {
-  position: absolute;
+  position: relative;
   visibility: hidden;
+  text-align: start;
   bottom: 0;
   left: 1rem;
-  padding-top: 0.5rem;
+  padding-top: 0.25rem;
 }
 
 .newsletter__input.error small {
