--- a/game/main.css
+++ b/game/main.css
@@ -1,24 +1,50 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+:root{
+    --primary-color:#141C08;
+    --secondary-color:#274d2c;
+    --third-color: rgba(202, 206, 149, 0.9);
+    --primary-font:'Lora', 'serif';
+    --secondary-font:'Merriweather', 'serif';
+}
+
 body {
-    background-color: wheat;
+    background-color: rgb(244, 255, 213);
 }
 
 .container {
     display: flex;
+    height: 100vh;
     flex-direction: column;
     align-items: center;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url(../Identyfikacja/3734330.svg);
+    /* background-image: url(../Identyfikacja/3734330.svg); */
+    background-size: cover;
 }
 .score {
-    border: 2px solid black;
+    background-color: var(--primary-color);
+    /* border: 2px solid black; */
+    color: white;
+    font-family: var(--primary-font);
+    font-weight: normal;
+    border-radius: 4px;
+    font-size: 1.2rem;
+    margin-top: 1.5rem;
     width: fit-content;
     padding: 0.5rem;
     text-align: center;
 }
 .canvas {
     display: block;
-    margin: 2rem auto;
+    margin: 1.5rem auto;
     /* width: 80%; -> na urządzeniach mobilnych można to zastosować*/ 
-    background-color: #3e3e3e;
-    border: 5px solid green;
+    background-color: var(--third-color);
+    border: 5px solid var(--primary-color);
 }
 
 .arrow__container {
@@ -49,8 +75,8 @@ body {
 }
 
 .arrow {
-    font-size: 4rem;
-    cursor: pointer;
+    font-size: 3rem;
+    color: var(--primary-color)
 }
 
 /* @media (min-width: 992px) { */
