changeSlide function changed

--- a/css/screen.css
+++ b/css/screen.css
@@ -23,11 +23,11 @@
   .hero__background {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url(../Identyfikacja/tlo_3.jpg);
-    display: none;
+    display: block;
   }
 
-  .hero__background.active {
-    display: block;
+  .hero__background.none {
+    display: none;
   }
 
   .slide--1 {
