--- a/css/main.css
+++ b/css/main.css
@@ -277,14 +277,10 @@ body {
   flex-direction: column;
   align-items: center;
   height: auto;
-  padding: 1.25rem 1rem;
+  padding: 2rem 2rem;
   margin: 0.25rem 0;
-  border-radius: 0.5rem;
 }
 
-.info--4 {
-  margin-bottom: 1rem;
-}
 
 .info__item p {
   text-align: center;
@@ -314,6 +310,7 @@ body {
   width: 100%;
   margin: 0 auto;
   background-color: rgba(255, 255, 255, 0.9);
+  
 }
 .moreInfo__title {
   font-size: var(--font-size-2);
@@ -399,7 +396,7 @@ body {
   text-align: center;
   padding: 1.25rem 1rem;
   margin: 0.25rem 0;
-  border-radius: 0.5rem;
+  border-radius: 4px;
 }
 
 .content--1,
