--- a/css/main.css
+++ b/css/main.css
@@ -792,3 +792,23 @@ body {
 .background__social2 {
   background-color: rgba(195, 199, 141, 0.7);
 }
+
+/* Arrow go up */
+.scroll__up {
+  display: none;
+}
+.display {
+  position: absolute;
+  bottom: 1%;
+  right: 2%;
+  background-color: #fff;
+  border-radius: 50%;
+  padding: 0.5rem 0.6rem;
+  position: fixed;
+  -webkit-box-shadow: 0px 2px 32px -8px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 2px 32px -8px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 2px 32px -8px rgba(0, 0, 0, 0.75);
+}
+.fa-arrow-up {
+  color: #141c08;
+}
