--- a/css/main.css
+++ b/css/main.css
@@ -796,7 +796,6 @@ body {
 /* Arrow go up */
 .scroll__up {
   background-color: transparent;
-  transition: all 0.4s ease-in-out;
 }
 
 .scroll__display {
@@ -807,10 +806,10 @@ body {
   -webkit-box-shadow: 0px 2px 32px -8px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 2px 32px -8px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 2px 32px -8px rgba(0, 0, 0, 0.75);
-  position: absolute;
-  bottom: 1rem;
-  right: 2rem;
+  bottom: 1%;
+  right: 2%;
   cursor: pointer;
+  transition: all 0.3s ease;
 }
 .fa-arrow-up {
   color: #141c08;
