--- a/css/main.css
+++ b/css/main.css
@@ -237,9 +237,9 @@ body {
 
 /****SEKCJA INFO ***/
 
-.container {
-  /* background-image: url(../Identyfikacja/plant_pattern.jpg); */
-}
+/* .container {
+   background-image: url(../Identyfikacja/plant_pattern.jpg); 
+} */
 
 .info {
   display: flex;
@@ -247,10 +247,11 @@ body {
 
   height: auto;
   margin: 0;
+  padding: 4rem 0;
 }
 
 .info__title {
-  font-size: var(--font-size-2);
+  font-size: var(--font-size-3);
   font-family: var(--primary-font);
   padding: 2rem 0;
   text-align: center;
@@ -258,6 +259,7 @@ body {
   letter-spacing: 0.5rem;
   width: 90%;
   margin: 0 auto;
+  margin-bottom: 2rem;
 }
 
 .info--1,
@@ -281,7 +283,6 @@ body {
   margin: 0.25rem 0;
 }
 
-
 .info__item p {
   text-align: center;
   font-family: var(--secondary-font);
@@ -302,18 +303,18 @@ body {
 
 /* Sekcja dodatkowe informacje */
 
-.moreInfo__wrapper {
+.moreInfo {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   overflow: hidden;
   width: 100%;
   margin: 0 auto;
+  padding: 4rem 0;
   background-color: rgba(255, 255, 255, 0.9);
-  
 }
 .moreInfo__title {
-  font-size: var(--font-size-2);
+  font-size: var(--font-size-3);
   font-family: var(--primary-font);
   padding: 2rem 0;
   text-align: center;
@@ -322,6 +323,7 @@ body {
   border-bottom: var(--primary-color) solid 1px;
   width: 90%;
   margin: 0 auto;
+  margin-bottom: 2rem;
 }
 
 .moreInfoBox {
@@ -369,13 +371,15 @@ body {
 .aboutUs {
   display: flex;
   flex-direction: column;
-  margin: 0.75rem;
+  height: auto;
+  margin: 0;
+  padding: 4rem 0;
 }
 
 /* Ostylowanie sekcji aboutUs__title */
 
 .aboutUs__title {
-  font-size: var(--font-size-2);
+  font-size: var(--font-size-3);
   font-family: var(--primary-font);
   padding: 2rem 0;
   text-align: center;
@@ -383,6 +387,7 @@ body {
   letter-spacing: 0.5rem;
   width: 90%;
   margin: 0 auto;
+  margin-bottom: 2rem;
 }
 
 /* Ostylowanie sekcji aboutUs__content */
