--- a/css/screen.css
+++ b/css/screen.css
@@ -1,28 +1,26 @@
 @media (min-width: 992px) {
-  .menu{
+  .menu {
     justify-content: space-between;
-    }
-    .menu__list {
+  }
+  .menu__list {
     justify-content: flex-end;
     font-size: var(--font-size-2);
     flex-grow: 0;
-    }
-    .menu__item {
+  }
+  .menu__item {
     padding: 16px;
-    }
-    
-    .menu__image{
+  }
+
+  .menu__image {
     display: block;
     height: px;
     margin-left: 150px;
-    
-    }
+  }
   /* ----- SEKCJA HERO -------- */
-
 
   .hero__background {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(../Identyfikacja/tlo_3.jpg);
+      url(../Identyfikacja/tlo_3.jpg);
     display: none;
   }
 
@@ -31,17 +29,19 @@
   }
 
   .slide--1 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../Carousel/slide2.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+      url(../Carousel/slide2.png);
   }
 
-  .slide--2{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../Carousel/slide3.jpg);
-  }  
-
+  .slide--2 {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+      url(../Carousel/slide3.jpg);
+  }
 
   /* Buttons prev next */
 
-  .prev, .next {
+  .prev,
+  .next {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -56,7 +56,7 @@
     border-radius: 0 3px 3px 0;
     user-select: none;
   }
-  
+
   /* Position the "next button" to the right */
   .prev {
     left: 1rem;
@@ -66,41 +66,39 @@
     right: 1rem;
     border-radius: 2px 0 0 2px;
   }
-  
+
   /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover {
+  .prev:hover,
+  .next:hover {
     background-color: rgba(133, 133, 133, 0.8);
   }
 
-/*slide animation */
+  /*slide animation */
 
-.slide {
-  position: absolute;
-  width: 100%; 
-  animation: slide 3s ease;
-}
-
-@keyframes slide {
-  0%{
-    transform: scale(1.07);
+  .slide {
+    position: absolute;
+    width: 100%;
+    animation: slide 3s ease;
   }
-  100%{
-    transform: scale(1);
+
+  @keyframes slide {
+    0% {
+      transform: scale(1.07);
+    }
+    100% {
+      transform: scale(1);
+    }
   }
-}
 
-
-
-/*  HERO */
+  /*  HERO */
 
   .hero {
     display: grid;
     grid-template-columns: 65vw auto;
     grid-template-rows: 80vh auto;
     margin-left: 3rem;
-     margin-top: 4rem;
+    margin-top: 4rem;
   }
-
 
   .hero__logo {
     height: 7rem;
@@ -130,7 +128,6 @@
     height: 3.2rem;
     width: 11rem;
   }
-  
 
   /* ------- SEKCJA INFO --------*/
   .info__item {
@@ -151,6 +148,7 @@
   }
   .moreInfo__wrapper {
     width: 90%;
+    margin: 0 auto;
   }
   .moreInfo__title {
     width: 90%;
@@ -188,7 +186,6 @@
     color: var(--sixth-color);
   }
 
-
   .aboutUs__social2 {
     display: none;
   }
@@ -198,7 +195,7 @@
   .social--3,
   .social--4 {
     padding: 0.1rem;
-  }  
+  }
 
   .social--1,
   .social--3 {
