--- a/css/main.css
+++ b/css/main.css
@@ -311,7 +311,7 @@ body {
   width: 100%;
   margin: 0 auto;
   padding: 4rem 0;
-  background-image: url(../Identyfikacja/Leaf.png);
+  background-image: url(../Identyfikacja/plant_pattern.jpg);
 }
 .moreInfo__wrapper {
   background-color: rgba(255, 255, 255, 0.9);
