--- a/css/screen.css
+++ b/css/screen.css
@@ -33,7 +33,7 @@
 
   .slide--1 {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-      url(../Carousel/slide2.png);
+      url(../Carousel/slide2.jpg);
   }
 
   .slide--2 {
