--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ body {
   max-height: 0;
   transition: max-height 0.2s ease-out;
   display: block;
-  background-color: var(--primary-color);;
+  background-color: var(--primary-color);
 }
 .menu__select {
   background-color: rgba(195, 199, 141, 0.9);
@@ -137,7 +137,6 @@ body {
   transform: rotate(45deg);
   top: 0;
 }
-
 
 /*Ostylowanie tla sekcji hero*/
 
@@ -259,13 +258,13 @@ body {
 
   height: auto;
   margin: 0;
-  padding: 4rem 0;
+  padding: 1rem 0;
 }
 
 .info__title {
   font-size: var(--font-size-3);
   font-family: var(--primary-font);
-  padding: 2rem 0;
+  padding: 0.5rem 0;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.5rem;
@@ -322,7 +321,7 @@ body {
   overflow: hidden;
   width: 100%;
   margin: 0 auto;
-  padding: 4rem 0;
+  padding: 1rem 0;
   background-image: url(../Identyfikacja/plant_pattern.jpg);
 }
 .moreInfo__wrapper {
@@ -340,7 +339,6 @@ body {
   width: 90%;
   margin: 0 auto;
   margin-bottom: 2rem;
-
 }
 
 .moreInfoBox {
@@ -390,7 +388,7 @@ body {
   flex-direction: column;
   height: auto;
   margin: 0;
-  padding: 4rem 0;
+  padding: 1rem 0;
 }
 
 /* Ostylowanie sekcji aboutUs__title */
@@ -398,7 +396,7 @@ body {
 .aboutUs__title {
   font-size: var(--font-size-3);
   font-family: var(--primary-font);
-  padding: 2rem 0;
+  padding: 0.5rem 0;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.5rem;
@@ -835,7 +833,7 @@ body {
 }
 
 .moreInfo__title,
-    .info__title,
-    .aboutUs__title{
-      margin-top: 50px;
-    }
+.info__title,
+.aboutUs__title {
+  margin-top: 50px;
+}
