--- a/css/main.css
+++ b/css/main.css
@@ -687,17 +687,16 @@ body {
   display: flex;
   background-color: #fff;
   content: '\2714';
+  transform: scale(0.8);
   border: 0.1rem solid var(--fifth-color);
   border-radius: 0.2rem;
-  width: 1rem;
-  height: 1rem;
-  padding-top: 0.2rem;
+  width: 1.2rem;
+  height: 1.2rem;
   padding: 0 0.1rem;
   margin-right: 0.5rem;
   vertical-align: center;
   color: transparent;
-  transform: translateY(0.5rem);
-  transition: 0.3s;
+  transition: 0.2s;
 }
 
 .newsletter input[type='checkbox'] + label:active:before {
@@ -705,9 +704,8 @@ body {
 }
 
 .newsletter input[type='checkbox']:checked + label:before {
-  background-color: var(--fourth-color);
-  color: var(--primary-color);
-  border-color: var(--fifth-color);
+  color: var(--secondary-color);
+  border-color: var(--primary-color);
 }
 /**Stylowanie ikony 'Do góry'*/
 
