--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,33 +1,5 @@
 @media (min-width: 576px) {
-  .menu {
-    display: flex;
-    height: 50px;
-    }
-    
-    .menu__list {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    max-height: none;
-    flex-grow: 1;
-    border: none;
-    }
-    
-    .menu__icon {
-    display: none;
-    }
-    
-    .menu__image{
-    display: none;
-    }
-    
-    .link {
-    border-bottom: none;
-    }
-    
-    .info__icon {
-    font-size: 2.5rem;
-    }
+ 
     
 /* ------- HERO --------*/
 
@@ -161,5 +133,37 @@
   }
   .box {
     width: 70%;
+  }
+}
+
+@media (min-width: 680px){
+.menu {
+  display: flex;
+  height: 50px;
+  }
+  
+  .menu__list {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  max-height: none;
+  flex-grow: 1;
+  border: none;
+  }
+  
+  .menu__icon {
+  display: none;
+  }
+  
+  .menu__image{
+  display: none;
+  }
+  
+  .link {
+  border-bottom: none;
+  }
+  
+  .info__icon {
+  font-size: 2.5rem;
   }
 }
